Add some props to filter on in the future
