# src/api/schema/recipe.schema.ts
@@ -1,11 +1,16 @@
 import mongoose, { Schema, Document } from 'mongoose';
 import { Ingredient } from '../model/ingredient';
 import { UNITS_OF_MEASUREMENT } from '../enum/unit-of-measurement';
+import { COOK_TYPES, CookType } from '../enum/recipe-cook-type';
+import { RECIPE_CENTERPIECE_TYPE, RecipeCenterpieceType } from '../enum/recipe-centerpiece-type';
 
 interface IRecipe extends Document {
     name: string;
     ingredients: Array<Ingredient>;
     instructions: string;
+    cookType: CookType,
+    totalTimeMinutes: number,
+    recipeCenterpieceType: RecipeCenterpieceType,
 }
 
 const RecipeSchema: Schema = new Schema({
@@ -21,6 +26,9 @@ const RecipeSchema: Schema = new Schema({
         }
     ],
     instructions: { type: String, required: true },
+    cookType: { type: String, required: false, enum: COOK_TYPES },
+    totalTimeMinutes: { type: Number, required: false },
+    recipeCenterpieceType: { type: String, required: false, enum: RECIPE_CENTERPIECE_TYPE },
     is_deleted: { type: Boolean, default: false, required: false }
 });
 
